<?xml version="1.0"?>
<package>
  <name>protobuf_comm</name>
  <version>0.0.1</version>
  <description>
    This package provides protobuf_comm to the ROS build system, thus, enabling its usage within the ROS ecosystem. The source files were copied from the Logistics League RefBox and adapted for use with the catkin build system.
  </description>

  <maintainer email="florian.eith@web.de">Flroian Eith</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
